@@ -663,8 +663,7 @@ fun proof_result immediate (tr, proof_trs) st =
 
         val future_proof = Proof.global_future_proof
           (fn prf =>
-            singleton
-              (Future.forks {name = "Toplevel.proof_result", group = NONE, deps = [], pri = ~1})
+            Goal.fork_name "Toplevel.future_proof"
               (fn () =>
                 let val (states, result_state) =
                   (case st' of State (SOME (Proof (_, (_, orig_gthy))), prev)
